tests/compile-fail/suzunari_error_with_args.stderr
error: #[suzunari_error] does not accept arguments; use #[suzu(...)] on fields instead
 --> tests/compile-fail/suzunari_error_with_args.rs:4:18
  |
4 | #[suzunari_error(skip_location)]
  |                  ^^^^^^^^^^^^^
